--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,22 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Text&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
-/* https://colorhunt.co/palette/213252 */
+/* Color inspiration: https://colorhunt.co/palette/213252 */
+
 *{
     margin: 0px;
 }
 
 header{
     font-family: 'Big Shoulders Inline Text', cursive;
-    font-size: 4rem;
+    font-size: 3.2rem;
     background-color: #070d59;
     color: #f6f5f5;
     text-align: center;
-    height: 8vh;
-    line-height: 8vh;
+    height: 10vh;
+    line-height: 10vh;
 }
 
 .main{
-    height: 89vh;
+    height: 84.5vh;
     display: flex;
 }
 
@@ -24,14 +25,15 @@ aside{
     background-color: #ee6f57;
     border: #f6f5f5 2px solid;
     font-family: 'VT323', monospace;
-    /* font-weight: bold; */
-    font-size: 1.5rem;;
+    font-size: 1.5rem;
+    color: #000000;
     width: 20%;
     padding: 10px;
 }
 
 .traces{
     display: flex;
+    color: rgb(28, 34, 34);
 }
 
 .trace{
@@ -43,7 +45,7 @@ aside{
 }
 
 .choose{
-    color: rgb(28, 34, 34);
+    
 }
 
 select{
@@ -79,9 +81,25 @@ input:hover, select:hover{
     cursor: pointer;
 }
 
-.results{
+section{
     font-weight: bold;
 }
+
+table, tr, td{
+    border: solid 3px #070d59;
+    margin: 0px;
+    margin-bottom: 10px;;
+    padding: 10px;;
+}
+
+#resultCalc{
+    white-space: pre;
+}
+
+#foot{
+    align-content: inline;
+}
+
 footer{
     background-color: #070d59;
     color: #f6f5f5;
@@ -89,8 +107,14 @@ footer{
     padding: 5px 0px;
     font-family: 'Big Shoulders Inline Text', cursive;
     font-size: 1.2rem;
-    height: 2vh;
-    line-height: 2vh;
+    height: 4vh;
+    line-height: 4vh;
     padding-top: 5px;
     padding-bottom: 5px;
 }
+
+a:link, a:visited {
+    color: #f6f5f5;
+    text-decoration: underline;
+    cursor: pointer;
+  }
